# total-madness

./: README.md
episode-0-locks/: Cargo.toml
episode-0-locks/src/: compare_and_swap.rs  main.rs
episode-1-async/: Cargo.toml
episode-1-async/src/: main.rs  task.rs
episode-2-async-locks/: Cargo.toml
episode-2-async-locks/src/: atomic_lock.rs  executor.rs  lock.rs  main.rs
