[package]
name = "episode-1-async"
version = "0.1.0"
edition = "2021"
default-run = "default"

[dependencies]
futures = "0.3.30"
async-std = { version = "*", features = ["unstable"] }

[[bin]]
name = "default"
path = "src/main.rs"

[[bin]]
name = "sibling"
path = "bin/sibling.rs"

[[bin]]
name = "naive"
path = "bin/naive.rs"
